--- a/style.css
+++ b/style.css
@@ -1550,6 +1550,16 @@ body:not(.comment-hidden) .entry-footer .comments-link {
 	margin: 0 0 1.5em;
 }
 
+.page-links a {
+	display: inline-block;
+}
+
+.page-links .page-number {
+	display: inline-block;
+	padding: 0 0.25em;
+	margin: 0 0.2em 0.2em 0.2em;
+}
+
 .post-thumbnail {
 	margin-top: 1.5em;
 	margin-bottom: 1em;
